# fonline-tla

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  ASCompiler.bat  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CNAME  Client.bat  DialogEditor.bat  FOnline.cfg  FormatSource.bat  InterfaceEditor.bat  LICENSE  Mapper.bat  Nullability.md  README.md  SCRIPT_API.md  Server publish.bat  Server.bat  SetupSDK.bat  TLA.cmake  TLA.fomain  TLA.vscode-config.json  _config.yml
.github/: copilot-instructions.md
Configs/: Debugging.focfg  Default.focfg  LocalTest.focfg  Mapper.focfg  PublicGame.focfg
Critters/: AHS9.focr  APwrArmorDontUse.focr  AgileFemaleThug.focr  AgileGuard.focr  AgileMaleThug.focr  Algernon.focr  Alien.focr  Android.focr  AngelaBishop.focr  Angryhelacytontype1.focr  Angryhelacytontype2.focr  Anna.focr  Ant.focr  ArroyoPatrol.focr  ArroyoPatrol2.focr  ArroyoPatrol3.focr  AutoCannon.focr  AverageMerchant.focr  AverageMerchantMale.focr  AveragePeasant.focr  AveragePeasant2.focr  BadMerchant.focr  BadMerchantMale.focr  Balthas.focr  BanditFemale.focr  BanditMale.focr  Behemoth.focr  BigGunGuardFemale.focr  BigGunGuardMale.focr  BigGunThugFemale.focr  BigGunThugMale.focr  BigJesus.focr  BigJesusMordino.focr  Bill.focr  BishopsGuard1.focr  BishopsGuard2.focr  BishopsThug2.focr  BlackArmoredRebel.focr  Bodyguard.focr  Bootlegger.focr  (+492 more)
Dialogs/: all_alco.fodlg  all_alco_w.fodlg  all_bandit.fodlg  all_bootlegger.fodlg  all_bounty_hunter.fodlg  all_cannibal.fodlg  all_casino_player.fodlg  all_casino_player_w.fodlg  all_child.fodlg  all_child_w.fodlg  all_default.fodlg  all_elronologist.fodlg  all_enclave_patrol.fodlg  all_energy_barier_guards.fodlg  all_energy_barier_terminal.fodlg  all_fslaver_elize_quest.fodlg  all_guard.fodlg  all_guard_w.fodlg  all_holy_people.fodlg  all_homesteader.fodlg  all_hunter.fodlg  all_mafia.fodlg  all_manufact_ammo.fodlg  all_marauder.fodlg  all_mercenary.fodlg  all_merchant.fodlg  all_mslaver_elize_quest.fodlg  all_narcodialer.fodlg  all_narcoman.fodlg  all_narcoman_w.fodlg  all_nomad.fodlg  all_outcast.fodlg  all_poker.fodlg  all_poor_man.fodlg  all_poor_man_w.fodlg  all_press_gang.fodlg  all_prostitute.fodlg  all_q_dappo_deadmen.fodlg  all_raider.fodlg  all_ranger.fodlg  (+805 more)
Docs/: AiControl.md  Animation.md  Refactoring.md  ScriptStyle.md
ExcludedScripts/: NameColorizing.fos
Gui/: Aim.fogui  Barter.fogui  Character.fogui  Credits.fogui  Cursor.fogui  Default.foguischeme  Dialog.fogui  DialogBox.fogui  Elevator.fogui  FixBoy.fogui  GMTown.fogui  Game.fogui  GlobalMap.fogui  InputBox.fogui  Inventory.fogui  ItemsContainer.fogui  Login.fogui  Menu.fogui  Options.fogui  Perk.fogui  PickUp.fogui  PipBoy.fogui  Preview.fogui  Radio.fogui  Registration.fogui  Say.fogui  SayExtended.fogui  SkillBox.fogui  Split.fogui  Timer.fogui  TownView.fogui  Use.fogui  Wait.fogui  fonline — ярлык.lnk
InterfaceEditor/: InterfaceEditor.cfg
Items/: Defaults.foitem  _10mm_ap.foitem  _10mm_jhp.foitem  _10mm_pistol.foitem  _10mm_smg.foitem  _14mm_ap.foitem  _14mm_pistol.foitem  _223_fmj.foitem  _223_pistol.foitem  _2mm_ec_ammo.foitem  _44_fmj_magnum.foitem  _44_magnum_jhp.foitem  _44_magnum_revolver.foitem  _44_magnum_speedloader.foitem  _45_caliber_ammo.foitem  _4_7mm_caseless.foitem  _5mm_ap.foitem  _5mm_jhp.foitem  _700_nitro_express.foitem  _7_62mm_ammo.foitem  _9mm_ammo.foitem  _9mm_ball.foitem  _9mm_mauser.foitem  abnormal_brain.foitem  access_card.foitem  account_book.foitem  active_dynamite.foitem  active_flare.foitem  active_geiger_counter.foitem  active_mine.foitem  active_motion_sensor.foitem  active_plastic_explosive.foitem  active_stealth_boy.foitem  advanced_power_armor.foitem  advanced_power_armor_mk2.foitem  alien_forward.foitem  alien_laser_pistol.foitem  alien_side.foitem  angel_eyes_dog_tag.foitem  anna_gold_locket.foitem  (+775 more)
Maps/: android.foloc  arroyo.foloc  arroyo.fomap  arroyo_bridge.fomap  arroyo_garden.fomap  arroyo_temple.fomap  arroyo_temple_entrance.fomap  atoll.foloc  atoll.fomap  barter_ground.foloc  barter_ground.fomap  bridge_keeper.foloc  broc_and_xander.foloc  broken.fomap  broken_basement.fomap  broken_caves1.fomap  broken_caves2.fomap  broken_dungeon.fomap  broken_hills.foloc  broken_mine.fomap  bunker_bos.foloc  cafe.foloc  cath_enter.fomap  cath_level1.fomap  cath_level2.fomap  cath_level3.fomap  cath_main.fomap  cathedral.foloc  cavern_0.foloc  cavern_1.foloc  cavern_2.foloc  cavern_3.foloc  cavern_4.foloc  cavern_5.foloc  church_of_atom.foloc  city_1.foloc  city_2.foloc  city_3.foloc  city_4.foloc  city_5.foloc  (+371 more)
Misc/: Bags.cfg  CritterTypes.cfg
TLA/Scripts/: Ai.fos  Ai.fosh  AiPattern.fos  AiSettings.fos  AiSettings.fosh  Animation.fos  Animation.fosh  ArroyoMynocDefence.fos  ArroyoNpc.fos  ArroyoRayders.fos  Bags.fos  Bags.fosh  BagsList.fos  Barter.fos  Base.fos  Behemoth.fos  Books.fos  BrokenCommon.fos  BulletinBoard.fos  CMakeLists.txt  Car.fos  Caravan.fos  Casino.fos  CaveMobs.fos  ChosenActions.fos  ChosenTabs.fos  Client3dChaReg.fos  ClientDefines.fos  ClientDefines.fosh  ClientItems.fos  ClientMain.fos  ClientScreenTest.fos  Collector.fos  Combat.fos  Combat.fosh  CombatMsg.fosh  CompRiddle.fos  Config.fos  CriticalTable.fosh  CritterAnims.fos  (+250 more)
TLA/Scripts/Critters/: Humanoid.focr  haenvi.focr  hanpwr.focr  hapowr.focr  harobe.focr  hfcabl.focr  hfcmbt.focr  hfjmps.focr  hflthr.focr  hfmaxx.focr  hfmetl.focr  hfprim.focr  hmbjmp.focr  hmbmet.focr  hmcmbl.focr  hmcmbt.focr  hmgant.focr  hmjmps.focr  hmljmp.focr  hmllth.focr  hmlmax.focr  hmlmet.focr  hmlthr.focr  hmlwar.focr  hmmaxx.focr  hmmetl.focr  hmwarr.focr  maantt.focr  mabos2.focr  maboss.focr  mabran.focr  mabrom.focr  maclaw.focr  maclw2.focr  macybr.focr  maddog.focr  madegg.focr  madeth.focr  mafeye.focr  mafire.focr  (+69 more)
TLA/Scripts/Items/: Block.foitem  BlockLight.foitem  DefaultWeapon.foitem  ExitGrid.foitem  Light.foitem  LightStop.foitem  ScrollBlock.foitem  block.foitem  block_light.foitem  default_armor.foitem  default_weapon.foitem  entrance.foitem  exit_grid.foitem  minimap_invisible_block.foitem  scroll_block.foitem  trigger.foitem
(+14031 files in other folders)
