cmake_minimum_required(VERSION 3.16.3)
project(TLA)

set(FO_DEV_NAME "TLA")
set(FO_NICE_NAME "FOnlineTLA")
set(FO_AUTHOR_NAME "FODev")
set(FO_GAME_VERSION "0.1.4")
set(FO_SINGLEPLAYER NO)
set(FO_ENABLE_3D NO)
set(FO_ANGELSCRIPT_SCRIPTING YES)
set(FO_NATIVE_SCRIPTING NO)
set(FO_MONO_SCRIPTING NO)
set(FO_DEFAULT_CONFIG LocalTest)
set(FO_DEBUGGING_CONFIG Debugging)
set(FO_MAPPER_CONFIG Mapper)
set(FO_GENERATE_ANGELSCRIPT_CONTENT Scripts)
set(FO_GEOMETRY HEXAGONAL)
set(FO_APP_ICON Resources/TLA.ico)
set(FO_MAKE_EXTERNAL_COMMANDS YES)
set(FO_INFO_MARKDOWN_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR})

option(FO_BUILD_CLIENT "" ON)
option(FO_BUILD_SERVER "" ON)
option(FO_BUILD_EDITOR "" ON)
option(FO_BUILD_MAPPER "" ON)
option(FO_BUILD_ASCOMPILER "" ON)
option(FO_BUILD_BAKER "" ON)
option(FO_UNIT_TESTS "" ON)
option(FO_OUTPUT_PATH "" ${CMAKE_CURRENT_SOURCE_DIR})

include(Engine/BuildTools/Init.cmake)

# Native code
AddEngineSource(COMMON Scripts/Extension/ContentMigration.cpp)
AddEngineSource(SERVER Scripts/Extension/ServerExtension.cpp)
AddEngineSource(CLIENT Scripts/Extension/ClientExtension.cpp)

# Content
AddContent(Configs)
AddContent(Scripts Scripts/Json)
AddContent(Maps)
AddContent(Critters Critters/Types)
AddContent(Items Items/Static Items/Custom)
AddContent(Dialogs)
AddContent(Texts)

# Resources
AddResources(FOnline Resources/FOnline)
AddResources(FOArt Resources/DataPacks/fo_art.zip Resources/DataPacks/fo_art_critters_h.zip)
AddResources(FOArt Resources/DataPacks/fo_art_critters_m.zip Resources/DataPacks/fo_art_critters_n.zip)
AddResources(BlackCombatArmor Resources/DataPacks/cablack.dat)
AddResources(Lieutenant Resources/DataPacks/lieutenant.dat)
AddResources(LongHairDude Resources/DataPacks/longhairdude.dat)

# AddResources( FTRobots Resources/DataPacks/ftrobots.bos )
AddResources(FOSound Resources/DataPacks/fo_sound.zip)
AddResources(Music Resources/FOnlineMusic)
AddResources(Video Resources/FOnlineVideo)
AddResources(CommonData Resources/CommonData)
AddResources(ServerData Resources/ServerData)
AddResources(Mapper Resources/Mapper)

# AddResources( VanBuren Resources/VanBuren )
# AddRawResources( Resources/Mapper )

# Test builds
CreatePackage(Dev LocalTest)
AddToPackage(Dev Client Windows win64 Profiling+OGL+Raw)
AddToPackage(Dev Server Windows win64 Profiling+Raw)
AddToPackage(Dev Editor Windows win64 Raw)
AddToPackage(Dev Mapper Windows win64 Raw Mapper)

CreatePackage(LinuxDev LocalTest)
AddToPackage(LinuxDev Client Linux x64 Raw)
AddToPackage(LinuxDev Server Linux x64 Raw)
AddToPackage(LinuxDev Editor Linux x64 Raw)
AddToPackage(LinuxDev Mapper Linux x64 Raw Mapper)

# Production builds
# CreatePackage( Production PublicGame )
# AddToPackage( Production Client Windows win64 Raw+Zip )
# AddToPackage( Production Server Windows win64 Raw+Zip )
# AddToPackage( Production Client Windows win32+win64 Raw )
# AddToPackage( Production Client Windows win32+win64 Wix )
# AddToPackage( Production Client Windows win32 Zip )
# AddToPackage( Production Client Android arm+arm64+x86 Apk )
# AddToPackage( Production Client Web wasm Raw )
# AddToPackage( Production Client macOS x64 Bundle )
# AddToPackage( Production Client iOS arm64 Bundle )
# AddToPackage( Production Client Linux x64 AppImage )
# AddToPackage( Production Server Windows win64 Raw )
# AddToPackage( Production Server Windows win64 Zip )
# AddToPackage( Production Server Linux x64 Raw )
# AddToPackage( Production Server Linux x64 Tar )
# AddToPackage( Production Server Linux x64 AppImage )

include(Engine/BuildTools/Finalize.cmake)
