cmake_minimum_required( VERSION 2.8 )
project( FOnlineNativeScripts )
set( CMAKE_CONFIGURATION_TYPES "Release" CACHE STRING "Release configuration" FORCE )

if( MSVC_IDE )
	set( CMAKE_VS_PLATFORM_TOOLSET "v120_xp" CACHE STRING "Platform toolset" FORCE )
	set( RO1 RUNTIME_OUTPUT_DIRECTORY_DEBUG )
	set( RO2 RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL )
	set( RO3 RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO )
	set( RO4 RUNTIME_OUTPUT_DIRECTORY_RELEASE )
	set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${COMPILER_DEFINES} /MT /MP" )
	set( CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${COMPILER_DEFINES} /MT /MP" )
else()
	set( RO1 LIBRARY_OUTPUT_DIRECTORY )
	set( RO2 LIBRARY_OUTPUT_DIRECTORY )
	set( RO3 LIBRARY_OUTPUT_DIRECTORY )
	set( RO4 LIBRARY_OUTPUT_DIRECTORY )
endif()
set( BINRAY_DIR "${CMAKE_BINARY_DIR}/../" )

include_directories( "${CMAKE_CURRENT_SOURCE_DIR}" )

add_library( fonline_tla SHARED "fonline.h" "fonline_tla.cpp" "fonline_tla.h" )
set_target_properties( fonline_tla PROPERTIES COMPILE_FLAGS "-D__SERVER" )
set_target_properties( fonline_tla PROPERTIES PREFIX "" ${RO1} "${BINRAY_DIR}" ${RO2} "${BINRAY_DIR}" ${RO3} "${BINRAY_DIR}" ${RO4} "${BINRAY_DIR}" )

add_library( fonline_tla_client SHARED "fonline.h" "fonline_tla.cpp" "fonline_tla.h" )
set_target_properties( fonline_tla_client PROPERTIES COMPILE_FLAGS "-D__CLIENT" )
set_target_properties( fonline_tla_client PROPERTIES PREFIX "" ${RO1} "${BINRAY_DIR}" ${RO2} "${BINRAY_DIR}" ${RO3} "${BINRAY_DIR}" ${RO4} "${BINRAY_DIR}" )

add_library( fonline_test SHARED "fonline.h" "fonline_test.cpp" "fonline_tla.h" )
set_target_properties( fonline_test PROPERTIES COMPILE_FLAGS "-D__SERVER" )
set_target_properties( fonline_test PROPERTIES PREFIX "" ${RO1} "${BINRAY_DIR}" ${RO2} "${BINRAY_DIR}" ${RO3} "${BINRAY_DIR}" ${RO4} "${BINRAY_DIR}" )

add_library( fonline_test_client SHARED "fonline.h" "fonline_test.cpp" "fonline_tla.h" )
set_target_properties( fonline_test_client PROPERTIES COMPILE_FLAGS "-D__CLIENT" )
set_target_properties( fonline_test_client PROPERTIES PREFIX "" ${RO1} "${BINRAY_DIR}" ${RO2} "${BINRAY_DIR}" ${RO3} "${BINRAY_DIR}" ${RO4} "${BINRAY_DIR}" )
